# Aicent Stack | The Sovereign AI Nervous System
# Domain: http://aicent.com & http://aicent.net & http://epoekie.com
# ====================================================================
# [THE SEVEN PILLARS OF SOVEREIGNTY]
#
# [SOUL]  EPOEKIE:   The Soul Layer (Global Registry: v0.1.0-alpha)
# [BRAIN] AICENT:    The Brain Layer (Local Workspace) [RFC-001]
# [NERVE] RTTP:      The Nerves      (Local Workspace) [RFC-002]
# [GUARD] RPKI:      The Immunity    (Local Workspace) [RFC-003]
# [BLOOD] ZCMK:      The Blood       (Local Workspace) [RFC-004]
# [BODY]  GTIOT:     The Body        (Local Workspace) [RFC-005]
# [HIVE]  AICENT-NET: The Hive       (Active Evolution) [RFC-006]
# ====================================================================
# Licensed under Apache-2.0 via Aicent.com Organization.

[workspace]
# -----------------------------------------------------------------------------
# INTEGRATED ORGANS: Physical Crate Manifolds in this Repository.
# epoekie resides on crates.io as a Sovereign Constant and is called as a dependency.
# -----------------------------------------------------------------------------
members = [
    "aicent",       # RFC-001: Cognitive Core
    "rttp",         # RFC-002: Neural Transport
    "rpki",         # RFC-003: Immune Defense
    "zcmk",         # RFC-004: Metabolic Clearing
    "gtiot",        # RFC-005: Embodied Execution
    "aicent-net",   # RFC-006: Global Operational Grid
    "aicent-demo",  # The Living Proof (MVO Suite)
]

# Resolver v2 ensures conflict-free feature resolution for 128-bit manifolds.
resolver = "2"

[workspace.package]
version = "1.0.0" # Official Sovereign Launch Version
edition = "2024"
authors = ["Aicent Stack Team <alliances@aicent.com>"]
license = "Apache-2.0"
repository = "https://github.com/Aicent-Stack"
homepage = "http://aicent.com"
rust-version = "1.85.0"
keywords = ["sovereign-ai", "low-latency", "rfc-standard", "epoekie", "aicent"]
categories = ["asynchronous", "network-programming", "cryptography", "distributed-computing"]

# ====================================================================
# [WORKSPACE DEPENDENCIES] - The Integrated Genetic Bank
# ====================================================================

[workspace.dependencies]
# --- THE SOVEREIGN LINK: Calling the Soul from the Global Registry ---
# We no longer point to a local path. We pull the official 'epoekie' 
# standard directly from crates.io to demonstrate planetary-scale resonance.
epoekie = { version = "0.1.0-alpha" }

# --- Internal Domain Linking (Atomic Workspaces) ---
aicent     = { path = "aicent" }
rttp       = { path = "rttp" }
rpki       = { path = "rpki" }
zcmk       = { path = "zcmk" }
gtiot      = { path = "gtiot" }
aicent-net = { path = "aicent-net" }

# --- High-Performance Asynchronous & Concurrency Primitives ---
tokio = { version = "1.37", features = ["full"] }
rayon = "1.10"
crossbeam = "0.8"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
once_cell = "1.19"
async-trait = "0.1"
futures = "0.3"

# --- Data Sovereignty & Memory Safety ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = { version = "1.6", features = ["serde"] } 
smallvec = { version = "1.13", features = ["serde"] } 
num-traits = { version = "0.2", default-features = false, features = ["libm"] } 
zeroize = { version = "1.7", features = ["derive"] }

# --- Cryptography & Physical Guard ---
ring = "0.17"
sha2 = "0.10"

# --- Hardware-Native Adaptation ---
embassy-executor = { version = "0.5", features = ["task-arena-size-32768"] }
embassy-time = { version = "0.3", features = ["std"] } 
nalgebra = { version = "0.32", default-features = false, features = ["libm"] } 

# --- Telemetry, Diagnostics & Benchmarking ---
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
rand = "0.8"
criterion = { version = "0.5", features = ["async_tokio"] }

# ====================================================================
# [WORKSPACE LINTS] - Quality Gating
# ====================================================================

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
manual_memcpy = "warn"
perf = "warn"
pedantic = "warn"

# ====================================================================
# [RELEASE PROFILES] - Engineered for Sub-Millisecond Finality
# ====================================================================

[profile.release]
opt-level = 3
lto = "fat"                   # Full Link-Time Optimization for cross-organ fusion
codegen-units = 1
panic = "abort"
strip = true
