[package]
name = "aicent-net"
description = "AICENT-NET: Global Operational Grid and Collective Intelligence Protocol [RFC-006]"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/Aicent-Stack/aicent-net" # Points to its own independent repository
homepage = "http://aicent.net"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-006-AICENT-NET.md"
keywords = ["hive-mind", "swarm-intelligence", "rfc-006", "operational-grid", "128-bit-atomic", "carrier-grade"]
categories = ["distributed-computing", "network-programming", "science"]
rust-version.workspace = true

[dependencies]
# --- Full-Spectrum Domain Orchestration (Unidirectional Dependency Flow) ---
# The Hive orchestrates all five individual domains to achieve planetary consensus.
aicent = { workspace = true }
rttp   = { workspace = true }
rpki   = { workspace = true }
zcmk   = { workspace = true }
gtiot  = { workspace = true }

# --- Planetary Orchestration & Grid Logic ---
async-trait = { workspace = true }
futures     = { workspace = true }

# --- Distributed Coordination & Memory Manifold ---
# [PERF] Lock-free primitives for massive state manifold synchronization.
# Utilizes 128-bit atomicity to ensure zero-data-tearing in global snapshots.
crossbeam         = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot       = { workspace = true } # HFT-grade synchronization for grid consensus
once_cell         = { workspace = true } # Global state manifold initialization

# --- Data, Telemetry & Diagnostics ---
serde  = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true } # Planetary-scale telemetry for hive events
tokio   = { workspace = true } # Core asynchronous runtime

[features]
default = ["std"]
# [Standard v1.0] Standard library support for high-end backbone dispatchers.
# Explicitly re-exporting 'std' for foundational Aicent Stack dependencies.
std = [
    "aicent/std",
    "rttp/std",
    "rpki/std",
    "zcmk/std",
    "gtiot/std"
]

# [RFC-006] Enable experimental swarm kinetic resonance simulations (v0.3.0 Preview).
swarm-simulation = []

[dev-dependencies]
# Performance auditing for Collective Finality targets (<100µs)
criterion = { workspace = true }
