[package]
name = "aicent-net"
description = "AICENT-NET: Global Operational Grid and Collective Intelligence Protocol [RFC-006]"
# Inheriting core protocol DNA from the imperial root workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://aicent.net"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-006-AICENT-NET.md"
rust-version.workspace = true

# Keywords and categories for planetary-scale hive authority
keywords = ["hive-mind", "swarm-intelligence", "rfc-006", "operational-grid", "128-bit-atomic", "carrier-grade"]
categories = ["distributed-computing", "network-programming", "science", "high-performance"]

[dependencies]
# --- Full-Spectrum Domain Orchestration (The Sovereign Hierarchy) ---
# The Hive orchestrates all five individual domains to achieve planetary consensus.
# All internal dependencies explicitly enable 'std' features for full integration.
aicent = { workspace = true, features = ["std"] } # Brain: Cognitive Source
rttp   = { workspace = true, features = ["std"] } # Nerves: Neural Spine
rpki   = { workspace = true, features = ["std"] } # Immunity: Collective Guard
zcmk   = { workspace = true, features = ["std"] } # Blood: Metabolic Shunting
gtiot  = { workspace = true, features = ["std"] } # Body: Kinetic Resonance

# --- Planetary Orchestration & Grid Logic ---
# [PERF] High-concurrency traits and async streams for hive-wide resonance.
async-trait = { workspace = true }
futures     = { workspace = true } # Stream handling for global state synchronization
tokio       = { workspace = true, features = ["full"] }

# --- Distributed Coordination & 128-bit Manifold ---
# [PERF] Utilizing 128-bit atomics to ensure zero-data-tearing in global snapshots.
# Essential for tracking total grid GFLOPS and node reputation in a single cycle.
crossbeam         = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot       = { workspace = true } # HFT-grade synchronization for grid state
once_cell         = { workspace = true } # Safe static initialization of the grid backbone

# --- Data, Telemetry & Diagnostics ---
serde   = { workspace = true, features = ["derive"] }
anyhow  = { workspace = true }
tracing = { workspace = true } # Planetary-scale telemetry for Hive events

[features]
# Standard implementation: Optimized for high-throughput backbone dispatchers.
default = ["std"]

# [Standard v1.0] Standard library support for the global operational grid.
# Explicitly re-exporting 'std' for all foundational dependencies to maintain homeostasis.
std = [
    "serde/std", 
    "anyhow/std", 
    "aicent/std", 
    "rttp/std", 
    "rpki/std", 
    "zcmk/std", 
    "gtiot/std", 
    "tokio/full"
]

# [RFC-006] Enable experimental swarm kinetic resonance simulations (v0.3.0 Preview).
# This activates advanced algorithms for robotic swarm formation control.
swarm-simulation = []

[dev-dependencies]
# Performance auditing for Collective Finality targets (<100µs).
criterion = { workspace = true, features = ["async_tokio"] }
