[package]
name = "aicent"
description = "Aicent Brain: Sovereign AI Identity and Cognitive Orchestration Protocol [RFC-001]"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://aicent.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-001-AICENT-BRAIN.md"
keywords = ["sovereign-ai", "orchestration", "cognitive-hub", "rfc-001", "128-bit-atomic"]
categories = ["ai", "asynchronous", "science", "distributed-computing"]
rust-version.workspace = true

[dependencies]
# --- Core Domain Orchestration (Unidirectional Flow) ---
# The Brain orchestrates the individual reflex organs (L0 & L1).
# 🛡️ THE IMPERIAL DECOUPLING: aicent-net is removed to break the cyclic dependency.
rttp  = { workspace = true, features = ["std"] }
rpki  = { workspace = true, features = ["std"] }
zcmk  = { workspace = true, features = ["std"] }
gtiot = { workspace = true, features = ["std"] }

# --- Cognitive Orchestration Primitives ---
# High-fidelity tools for intent decomposition and 128-bit state manifolds.
serde       = { workspace = true, features = ["derive"] }
anyhow      = { workspace = true }
tokio       = { workspace = true, features = ["full"] }
tracing     = { workspace = true }        # Industrial-grade telemetry for reasoning cycles
async-trait = { workspace = true }        # Trait abstraction for Sovereign AID orchestration
once_cell   = { workspace = true }        # Safe static management of global manifolds

[features]
# Standard implementation: Enables full feature-set for cloud and high-end edge.
default = ["std"]

# [Standard v1.0] Standard library support for the cognitive hub.
# All internal organs are synchronized to the 'std' state.
std = [
    "serde/std", 
    "anyhow/std", 
    "rttp/std", 
    "rpki/std", 
    "zcmk/std", 
    "gtiot/std", 
    "tokio/full"
]

# [RFC-006] Future-proofing for Hive convergence.
# Note: Hive logic is now handled as an external extension to prevent circularity.
hive-ready = []

[dev-dependencies]
# Performance benchmarking for sub-200µs cognitive sharding finality.
criterion = { workspace = true, features = ["async_tokio"] }
