[package]
name = "aicent"
description = "Aicent Brain: Sovereign AI Identity and Cognitive Orchestration Protocol [RFC-001]"
# Inheriting core protocol DNA from the imperial root workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/Aicent-Stack/aicent"
homepage = "http://aicent.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-001-AICENT-BRAIN.md"
rust-version.workspace = true

# Keywords and categories for planetary-scale cognitive authority
keywords = ["sovereign-ai", "orchestration", "cognitive-hub", "rfc-001", "128-bit-atomic", "carrier-grade"]
categories = ["ai", "asynchronous", "science", "distributed-computing", "systems"]

[dependencies]
# --- The Sovereign Master Commander (Unidirectional flow) ---
# The Brain orchestrates the L0, L1, and L2 layers.
# These dependencies are strictly synchronized via the workspace manifest.
rttp  = { workspace = true, features = ["std"] } # Nerves: L0 Transport
rpki  = { workspace = true, features = ["std"] } # Immunity: L1 Security
zcmk  = { workspace = true, features = ["std"] } # Blood: L1 Economics
gtiot = { workspace = true, features = ["std"] } # Body: L2 Execution

# --- Cognitive Orchestration Primitives (Non-Shrunken) ---
# High-fidelity tools for intent decomposition and 128-bit state manifolds.
serde       = { workspace = true, features = ["derive"] }
anyhow      = { workspace = true }
tokio       = { workspace = true, features = ["full"] } # Master async runtime
tracing     = { workspace = true }        # Industrial-grade telemetry for cognitive cycles
async-trait = { workspace = true }        # Trait abstraction for Sovereign AID orchestration
once_cell   = { workspace = true }        # Safe static management of global manifolds

[features]
# Standard implementation: Enables full feature-set for cloud and planetary edge.
default = ["std"]

# [Standard v1.0] Standard library support for the cognitive hub.
# Explicitly re-exporting 'std' for all foundational dependencies to maintain metabolic homeostasis.
# 🛡️ THE ARCHITECTURAL LOCK: Ensures all sub-organs are synchronized to the 'std' state.
std = [
    "serde/std", 
    "anyhow/std", 
    "rttp/std", 
    "rpki/std", 
    "zcmk/std", 
    "gtiot/std", 
    "tokio/full"
]

# [RFC-006] Hive-Mind Readiness Flag.
# Prepared for future Hive convergence without introducing cyclic loops.
hive-ready = []

[dev-dependencies]
# Performance benchmarking for sub-200µs cognitive sharding finality.
criterion = { workspace = true, features = ["async_tokio"] }
