[package]
name = "aicent"
description = "Aicent Brain: Sovereign AI Identity and Cognitive Orchestration Protocol [RFC-001]"
# Inheriting core protocol DNA from the imperial root workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://aicent.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-001-AICENT-BRAIN.md"
rust-version.workspace = true

# Keywords and categories for planetary-scale cognitive authority
keywords = ["sovereign-ai", "orchestration", "cognitive-hub", "rfc-001", "128-bit-atomic"]
categories = ["ai", "asynchronous", "science", "distributed-computing"]

[dependencies]
# --- Core Domain Orchestration (Unidirectional Dependency Flow) ---
# The Brain orchestrates the individual reflex organs (L0 & L1).
# Explicitly enable 'std' features for full protocol integration.
rttp  = { workspace = true, features = ["std"] }
rpki  = { workspace = true, features = ["std"] }
zcmk  = { workspace = true, features = ["std"] }
gtiot = { workspace = true, features = ["std"] }

# --- High-Performance Cognitive Primitives ---
# [PERF] Utilizing 128-bit hardware atomicity for identity state manifolds.
crossbeam   = { workspace = true } # REQUIRED for AtomicCell<u128> support
serde       = { workspace = true, features = ["derive"] }
anyhow      = { workspace = true }
tokio       = { workspace = true, features = ["full"] }
tracing     = { workspace = true }        # Industrial-grade telemetry for reasoning cycles
async-trait = { workspace = true }        # Trait abstraction for Sovereign AID orchestration
once_cell   = { workspace = true }        # Safe static management of global manifolds

[features]
# Standard implementation: Enables full feature-set for cloud and high-end edge.
default = ["std"]

# [Standard v1.0] Standard library support for the cognitive hub.
# Explicitly re-exporting 'std' for foundational dependencies to ensure homeostasis.
std = [
    "serde/std", 
    "anyhow/std", 
    "rttp/std", 
    "rpki/std", 
    "zcmk/std", 
    "gtiot/std", 
    "tokio/full"
]

# [RFC-006] Hive-Mind Readiness Flag.
# Prepared for future Hive convergence without introducing cyclic loops.
hive-ready = []

[dev-dependencies]
# Performance benchmarking for sub-200µs cognitive sharding finality.
criterion = { workspace = true, features = ["async_tokio"] }
