[package]
name = "gtiot"
description = "GTIOT: High-Fidelity Edge Fusion and Action-Collapse Framework [RFC-005]"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://gtiot.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-005-GTIOT-BODY.md"
keywords = ["robotics", "edge-computing", "rfc-005", "action-collapse", "proprioception"]
categories = ["embedded", "hardware-support", "no-std"]
rust-version = "1.75"

[dependencies]
# --- Core Organism Linking ---
# The Body reacts to Nerves (RTTP), Immunity (RPKI), and Blood (ZCMK)
rttp.workspace = true
rpki.workspace = true
zcmk.workspace = true

# --- Hard Real-Time Execution ---
# [RFC-005] High-frequency (1.2 kHz) task scheduling
embassy-executor.workspace = true
embassy-time.workspace = true

# --- Kinetic Primitives ---
# [PHYSICS] Linear algebra for 12-DOF robotics and motor torque vectors
nalgebra = { version = "0.32", default-features = false, features = ["libm"] }
smallvec = { workspace = true, features = ["serde"] }

# --- Logic & Telemetry ---
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
tracing.workspace = true
once_cell.workspace = true
tokio = { workspace = true, features = ["sync"] } # Simulation bridge

[features]
default = ["std"]
# [RFC-005] Standard library support for high-fidelity edge fusion
std = ["serde/std", "anyhow/std", "rttp/std"]
# [RFC-005] Bare-metal support for robotics MCUs/NPUs
no_std = ["nalgebra/libm"]

[dev-dependencies]
criterion = "0.5" # Auditing the 200µs Action-Collapse target
