[package]
name = "rpki"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rttp.workspace = true
rayon.workspace = true
crossbeam.workspace = true
crossbeam-channel.workspace = true
sha2.workspace = true
ring.workspace = true
zeroize.workspace = true
once_cell.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
